# todo_app

./: Makefile  README.md  pyproject.toml
app/: main.py
app/db/: __init__.py  fake_db.py
app/models/: __init__.py  todo_model.py
app/routes/: __init__.py  todo_routes.py
