[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
